crates/cadenza-syntax/src/snapshots/cadenza_syntax__lexer__tests__comment_test.snap
---
source: crates/cadenza-syntax/src/lexer.rs
expression: "lex(\"# hello\\n# other\")"
---
[
    Token {
        span: Span {
            start: 0,
            end: 1,
        },
        kind: CommentStart,
    },
    Token {
        span: Span {
            start: 1,
            end: 7,
        },
        kind: CommentContent,
    },
    Token {
        span: Span {
            start: 7,
            end: 8,
        },
        kind: Newline,
    },
    Token {
        span: Span {
            start: 8,
            end: 9,
        },
        kind: CommentStart,
    },
    Token {
        span: Span {
            start: 9,
            end: 15,
        },
        kind: CommentContent,
    },
]
