crates/cadenza-syntax/src/snapshots/cadenza_syntax__lexer__tests__doc_comment_test.snap
---
source: crates/cadenza-syntax/src/lexer.rs
expression: "lex(\"## hello\\n## other\")"
---
[
    Token {
        span: Span {
            start: 0,
            end: 2,
        },
        kind: DocCommentStart,
    },
    Token {
        span: Span {
            start: 2,
            end: 8,
        },
        kind: DocCommentContent,
    },
    Token {
        span: Span {
            start: 8,
            end: 9,
        },
        kind: Newline,
    },
    Token {
        span: Span {
            start: 9,
            end: 11,
        },
        kind: DocCommentStart,
    },
    Token {
        span: Span {
            start: 11,
            end: 17,
        },
        kind: DocCommentContent,
    },
]
