crates/cadenza-syntax/src/snapshots/cadenza_syntax__lexer__tests__empty_string.snap
---
source: crates/cadenza-syntax/src/lexer.rs
expression: "lex(r#\"\"\"\"#)"
---
[
    Token {
        span: Span {
            start: 0,
            end: 1,
        },
        kind: StringStart,
    },
    Token {
        span: Span {
            start: 1,
            end: 1,
        },
        kind: StringContent,
    },
    Token {
        span: Span {
            start: 1,
            end: 2,
        },
        kind: StringEnd,
    },
]
