crates/cadenza-syntax/src/snapshots/cadenza_syntax__lexer__tests__example_ap-nested.snap
---
source: crates/cadenza-syntax/src/lexer.rs
expression: foo 1 (bar 2) 3 4
---
[
    Token {
        span: Span {
            start: 0,
            end: 3,
        },
        kind: Identifier,
    },
    Token {
        span: Span {
            start: 3,
            end: 4,
        },
        kind: Space,
    },
    Token {
        span: Span {
            start: 4,
            end: 5,
        },
        kind: Integer,
    },
    Token {
        span: Span {
            start: 5,
            end: 6,
        },
        kind: Space,
    },
    Token {
        span: Span {
            start: 6,
            end: 7,
        },
        kind: LParen,
    },
    Token {
        span: Span {
            start: 7,
            end: 10,
        },
        kind: Identifier,
    },
    Token {
        span: Span {
            start: 10,
            end: 11,
        },
        kind: Space,
    },
    Token {
        span: Span {
            start: 11,
            end: 12,
        },
        kind: Integer,
    },
    Token {
        span: Span {
            start: 12,
            end: 13,
        },
        kind: RParen,
    },
    Token {
        span: Span {
            start: 13,
            end: 14,
        },
        kind: Space,
    },
    Token {
        span: Span {
            start: 14,
            end: 15,
        },
        kind: Integer,
    },
    Token {
        span: Span {
            start: 15,
            end: 16,
        },
        kind: Space,
    },
    Token {
        span: Span {
            start: 16,
            end: 17,
        },
        kind: Integer,
    },
]
