crates/cadenza-syntax/src/snapshots/cadenza_syntax__lexer__tests__example_ap-simple.snap
---
source: crates/cadenza-syntax/src/lexer.rs
expression: foo 1 2 3 baz bar
---
[
    Token {
        span: Span {
            start: 0,
            end: 3,
        },
        kind: Identifier,
    },
    Token {
        span: Span {
            start: 3,
            end: 4,
        },
        kind: Space,
    },
    Token {
        span: Span {
            start: 4,
            end: 5,
        },
        kind: Integer,
    },
    Token {
        span: Span {
            start: 5,
            end: 6,
        },
        kind: Space,
    },
    Token {
        span: Span {
            start: 6,
            end: 7,
        },
        kind: Integer,
    },
    Token {
        span: Span {
            start: 7,
            end: 8,
        },
        kind: Space,
    },
    Token {
        span: Span {
            start: 8,
            end: 9,
        },
        kind: Integer,
    },
    Token {
        span: Span {
            start: 9,
            end: 10,
        },
        kind: Space,
    },
    Token {
        span: Span {
            start: 10,
            end: 13,
        },
        kind: Identifier,
    },
    Token {
        span: Span {
            start: 13,
            end: 14,
        },
        kind: Space,
    },
    Token {
        span: Span {
            start: 14,
            end: 17,
        },
        kind: Identifier,
    },
]
