crates/cadenza-syntax/src/snapshots/cadenza_syntax__lexer__tests__example_let-decl.snap
---
source: crates/cadenza-syntax/src/lexer.rs
expression: let x
---
[
    Token {
        span: Span {
            start: 0,
            end: 3,
        },
        kind: Identifier,
    },
    Token {
        span: Span {
            start: 3,
            end: 4,
        },
        kind: Space,
    },
    Token {
        span: Span {
            start: 4,
            end: 5,
        },
        kind: Identifier,
    },
]
