crates/cadenza-syntax/src/snapshots/cadenza_syntax__lexer__tests__example_lit-int.snap
---
source: crates/cadenza-syntax/src/lexer.rs
expression: "1234"
---
[
    Token {
        span: Span {
            start: 0,
            end: 4,
        },
        kind: Integer,
    },
]
